<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

                             <groupId>com.brandongcobb</groupId>
                             <artifactId>vegan</artifactId>
                             <version>0.1.0</version>
                             <packaging>jar</packaging>

                             <properties>
                                 <java.version>21</java.version>
                                 <vaadin.version>24.7.4</vaadin.version>
                                 <jackson.version>2.16.6</jackson.version>
                                 <spring-boot.version>3.4.5</spring-boot.version>
                                 <spring-ai.version>1.0.0</spring-ai.version>
                             </properties>
                             <parent>
                                 <groupId>org.springframework.boot</groupId>
                                 <artifactId>spring-boot-starter-parent</artifactId>
                                 <version>3.5.0-RC1</version>
                                 <relativePath/> <!-- inherits from repo -->
                             </parent>
                             <dependencyManagement>
                                 <dependencies>
                                     <dependency>
                                         <groupId>org.springframework.ai</groupId>
                                         <artifactId>spring-ai-bom</artifactId>
                                         <version>${spring-ai.version}</version>
                                         <type>pom</type>
                                         <scope>import</scope>
                                     </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-bom</artifactId>
            <version>24.7.4</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>
                                 </dependencies>
                             </dependencyManagement>
                             <dependencies>
                                 <!-- Spring MVC -->
 <!--                                <dependency>
                                     <groupId>org.springframework.boot</groupId>
                                     <artifactId>spring-boot-starter-web</artifactId>
                                 </dependency> -->
                                 <dependency>
                                 <!-- Core Jackson databind -->
                                     <groupId>org.springframework.ai</groupId>
                                     <artifactId>spring-ai-mcp-server-spring-boot-starter</artifactId>
                                     <version>1.0.0-M6</version>
                                 </dependency>
                                 <dependency>
                                     <groupId>org.springframework.boot</groupId>
                                     <artifactId>spring-boot-starter</artifactId>
                                     <version>3.4.5</version>
                                 </dependency>
                                 <dependency>
                                     <groupId>org.apache.httpcomponents</groupId>
                                     <artifactId>httpclient</artifactId>
                                     <version>4.5.13</version>
                                 </dependency>
                                 <dependency>
                                     <groupId>com.brandongcobb</groupId>
                                     <artifactId>metadata</artifactId>
                                     <version>1.0.0</version>
                                 </dependency>
                                 <dependency>
                                   <groupId>org.springframework.boot</groupId>
                                   <artifactId>spring-boot-starter-web</artifactId>
                                 </dependency>
                                 <dependency>
                                   <groupId>com.vaadin</groupId>
                                   <artifactId>vaadin-spring-boot-starter</artifactId>
                                   <version>${vaadin.version}</version>
                                 </dependency>
                                 <dependency>
                                   <groupId>org.springframework.boot</groupId>
                                   <artifactId>spring-boot-starter-validation</artifactId>
                                 </dependency>
                                 <dependency>
                                     <groupId>com.sparkjava</groupId>
                                     <artifactId>spark-core</artifactId>
                                     <version>2.9.4</version>
                                 </dependency>
                                 <!-- JPA + H2 -->
                                 <dependency>
                                     <groupId>org.springframework.boot</groupId>
                                     <artifactId>spring-boot-starter-data-jpa</artifactId>
                                 </dependency>
                                 <dependency>
                                     <groupId>com.h2database</groupId>
                                     <artifactId>h2</artifactId>
                                     <scope>runtime</scope>
                                 </dependency>

                                 <!-- Security -->
                                 <dependency>
                                     <groupId>org.springframework.boot</groupId>
                                     <artifactId>spring-boot-starter-security</artifactId>
                                 </dependency>

                                 <!-- Vaadin Flow for Admin UI -->
                                 <dependency>
                                     <groupId>org.postgresql</groupId>
                                     <artifactId>postgresql</artifactId>
                                     <version>42.3.6</version>
                                 </dependency>
                                 <dependency>
                                     <groupId>com.zaxxer</groupId>
                                     <artifactId>HikariCP</artifactId>
                                     <version>5.0.1</version>
                                 </dependency>
    <dependency>
        <groupId>com.vaadin</groupId>
        <artifactId>vaadin-spring-boot-starter</artifactId>
    </dependency>
    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
                             </dependencies>

                             <build>
                                 <plugins>
                                     <plugin>
                                         <groupId>org.springframework.boot</groupId>
                                         <artifactId>spring-boot-maven-plugin</artifactId>
                                     </plugin>
                                 </plugins>
                             </build>
                             <repositories>
                                 <repository>
                                     <id>spring-milestones</id>
                                     <name>Spring Milestones</name>
                                     <url>https://repo.spring.io/milestone</url>
                                     <snapshots>
                                         <enabled>false</enabled>
                                     </snapshots>
                                 </repository>

                                 <repository>
                                     <id>central</id>
                                     <url>https://repo.maven.apache.org/maven2</url>
                                 </repository>
                             </repositories>
                             <pluginRepositories>
                                 <pluginRepository>
                                     <id>spring-milestones</id>
                                     <name>Spring Milestones</name>
                                     <url>https://repo.spring.io/milestone</url>
                                     <snapshots>
                                         <enabled>false</enabled>
                                     </snapshots>
                                 </pluginRepository>
                             </pluginRepositories>
</project>
